--- a/src/style.css
+++ b/src/style.css
@@ -9,3 +9,26 @@ body,
     height: 100%;
     background: ivory;
 }
+
+
+.myButton {
+    background-color: #4caf50;
+    /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.positionMiddle {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    z-index: 100;
+}
